# PlexRedisManager

./: Cargo.toml  config.toml
src/: context_manager.rs  ctx_manager.rs  main.rs  region.rs
src/config/: models.rs
src/error/: parsing_error.rs
src/game/: booster_group.rs  mod.rs  options.rs  type.rs  utils.rs
src/redis/: mod.rs
src/server/: generic.rs  minecraft.rs  mod.rs  server_group.rs
src/server/dedicated/: collection.rs  instance.rs  mod.rs  server.rs
