[package]
name = "plex_redis_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.14"
redis = "0.25.4"
serde = {version = "1.0.204", features = ["derive"]}
serde_json = {version = "1.0.120"}
lazy_static = "1.5.0"
strum_macros = "0.26.4"
strum = "0.26.3"
rand = "0.8.5"
chrono = "0.4.38"
thiserror = "1.0.62"
